# tlaps-bench

./: .gitignore  .gitmodules  CHEATING.md  Makefile  NOTICE  PROOF_ANTIPATTERNS.md  README.md  cheating_detection.py  check_proof.py  generate_benchmarks.py  pyproject.toml  run_codex_benchmark.py  validate_benchmarks.py
benchmark/ByzantinePaxos/: Consensus.tla  VoteProof.tla  VoteProof_Liveness.tla
benchmark/Euclid/: EuclidEx_GCD3.tla
benchmark/auto-complete/OpenAddressing/: OpenAddressing.tla  OpenAddressing_proof_CompleteSafety.tla
benchmark/level1/Allocator/: Allocator_AllocateMutex.tla  Allocator_AllocateTypeInvariant.tla  Allocator_InitMutex.tla  Allocator_InitTypeInvariant.tla  Allocator_NextMutex.tla  (+5 more)
docker/: Dockerfile  base-entrypoint.sh  base.Dockerfile  codex-config.example.toml  docker-compose.yml  entrypoint.sh  firewall.sh
docker/install-scripts/: install-codex.sh
scripts/: import_tlaps_example.py  install_deps.sh  setup.sh
source/AnvilLock/: AnvilLock.tla
src/common/: cheating_detection.py  check_proof.py  container.py  setup.py  validate.py
src/dataset/: integrity.py  sany_audit.py
src/evaluator/: container.py  runner.py  score.py  termination.py
src/tlacheck/: cli.py  context.py  engine.py  gates.py  issue.py  verdict.py
src/tlacore/: model.py  provenance.py  source.py
src/tlaps_bench/: cli.py
tests/common/: test_docker_commands.py  test_docker_integration.py  test_strict_status.py
tests/evaluator/: test_container.py  test_llm_integration.py  test_termination.py
tests/tlacheck/: test_context.py  test_gates.py  test_rules.py
(+2864 files in other folders)
